Add fiat account and coin account models

--- a/public/demo/login.html
+++ b/public/demo/login.html
@@ -81,6 +81,14 @@
             ></div>
           </div>
         </div>
+        <div class="mt-4">
+          <button
+            onclick="window.location.href='/demo/balance.html'"
+            class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+          >
+            View Balances
+          </button>
+        </div>
       </div>
 
       <!-- Login Form -->
