Rename coin_type to coin currency

--- a/public/demo/balance.html
+++ b/public/demo/balance.html
@@ -158,7 +158,7 @@
             <div class="balance-card rounded-lg p-4 mb-4">
               <div class="flex justify-between items-center mb-3">
                 <h5 class="text-lg font-bold text-gray-900">${
-                  coin.coin_type
+                  coin.coin_currency
                 } Total</h5>
               </div>
               <div class="grid grid-cols-2 gap-3">
@@ -183,7 +183,7 @@
                 <div class="balance-card rounded-lg p-4">
                   <div class="flex justify-between items-center mb-3">
                     <h5 class="text-lg font-bold text-gray-900">${
-                      coin.coin_type
+                      coin.coin_currency
                     }</h5>
                     <span class="text-sm bg-gray-100 text-gray-700 px-3 py-1 rounded-full">
                       ${account.layer}
