--- a/public/demo/login.html
+++ b/public/demo/login.html
@@ -182,7 +182,8 @@
     </div>
 
     <script>
-      const API_URL = "http://localhost:3969/api/v1/auth/google";
+      const API_URL =
+        "https://backend.exchange.snowfoxglobal.org/api/v1/auth/google";
       const loading = document.querySelector(".loading");
       const statusMessage = document.getElementById("statusMessage");
       const loginForm = document.getElementById("loginForm");
